Finishing the project